--- a/module-solution2/index.html
+++ b/module-solution2/index.html
@@ -23,6 +23,7 @@ p {
   margin-left: auto;
   font-family: Helvetica;
   color: white;
+  align-items: center;
 }
 
 /* Simple Responsive Framework. */
