--- a/module-solution2/index.html
+++ b/module-solution2/index.html
@@ -15,14 +15,14 @@ h1 {
 }
 
 p {
-  border: 1px solid black;
-  background-color: #A52A2A;
+  border: 5px solid black;
+  background-color: ##99A3A4;
   width: 90%;
   height: 150px;
   margin-right: auto;
   margin-left: auto;
   font-family: Helvetica;
-  color: white;
+  color: black;
   align-items: center;
 }
 
