--- a/module-solution2/index.html
+++ b/module-solution2/index.html
@@ -16,7 +16,7 @@ h1 {
 
 p {
   border: 5px solid black;
-  background-color: ##99A3A4;
+  background-color: #99A3A4;
   width: 90%;
   height: 150px;
   margin-right: auto;
