--- a/module-solution2/index.html
+++ b/module-solution2/index.html
@@ -15,15 +15,19 @@ h1 {
 }
 
 p {
-  border: 5px solid black;
-  background-color: #99A3A4;
-  width: 90%;
-  height: 150px;
-  margin-right: auto;
-  margin-left: auto;
-  font-family: Helvetica;
-  color: black;
-  align-items: center;
+  .container {
+  width: 500px;
+  border: 5px solid rgb(111,41,97);
+  border-radius: .5em;
+  padding: 10px;
+}
+  .item {
+  width: 100px;
+  padding: 10px;
+  background-color: rgba(111,41,97,.3);
+  border: 2px solid rgba(111,41,97,.5);
+  display: inline-block;
+  vertical-align: middle
 }
 
 /* Simple Responsive Framework. */
@@ -72,12 +76,10 @@ p {
 <body>
 <h1>Our menu</h1>
 
-<div class="row">
-  <div class="col-lg-3 col-md-6"><p>Item 1</p></div>
-  <div class="col-lg-3 col-md-6"><p>Item 2</p></div>
-  <div class="col-lg-3 col-md-6"><p>Item 3</p></div>
-  
+<div class="container">
+  <div class="item">Lorem</div>
+  <div class="item">Lorem<br>Ipsum</div>
+  <div class="item">Lorem<br>Ipsum<br>Ipsum</div>
 </div>
-
 </body>
 </html>
