--- a/module-solution2/index.html
+++ b/module-solution2/index.html
@@ -7,7 +7,12 @@
 <style>
 
 /********** Base styles **********/
-* {
+body {
+  padding: 20px;
+  font: 1em Helvetica Neue, Helvetica, Arial, sans-serif;
+}
+  
+  * {
   box-sizing: border-box;
 }
 h1 {
@@ -15,6 +20,8 @@ h1 {
 }
 
 p {
+  margin: 0 0 1em 0;
+}
   .container {
   width: 500px;
   border: 5px solid rgb(111,41,97);
