--- a/module-solution2/index.html
+++ b/module-solution2/index.html
@@ -31,7 +31,7 @@ p {
   .item {
   width: 100px;
   padding: 10px;
-  background-color: rgba(111,41,97,.3);
+  background-color: rgba(153, 163, 164,.3);
   border: 2px solid rgba(111,41,97,.5);
   display: inline-block;
   vertical-align: middle
