--- a/module-solution2/index.html
+++ b/module-solution2/index.html
@@ -35,6 +35,8 @@ p {
   padding: 10px;
   border: 2px solid rgba(23,32,42,.5);
   display: inline-block;
+        background-color: rgba(169, 50, 38,.3);
+
   vertical-align: middle
 }
 
