--- a/module-solution2/index.html
+++ b/module-solution2/index.html
@@ -32,7 +32,7 @@ p {
   .item {
   width: 100px;
   padding: 10px;
-  border: 2px solid rgb(23,32,42,.5);
+  border: 2px solid rgb(23,32,42);
   display: inline-block;
         background-color: rgba(176, 58, 46,.3);
 
