--- a/module-solution2/index.html
+++ b/module-solution2/index.html
@@ -34,7 +34,7 @@ p {
   padding: 10px;
   border: 2px solid rgb(23,32,42);
   display: inline-block;
-        background-color: rgba(176, 58, 46,.3);
+        background-color: rgba(247, 220, 111,);
 
   vertical-align: middle
 }
