--- a/module-solution2/index.html
+++ b/module-solution2/index.html
@@ -25,7 +25,7 @@ p {
   .container {
   width: 500px;
   border: 3px solid rgb(23,32,42);
-    background-color: rgba(153, 163, 164,.3);
+    background-color: rgba(215, 189, 226,.3);
   padding: 5px;
     
 }
@@ -86,7 +86,7 @@ p {
 <h1>Our menu</h1>
 
 <div class="container">
-  <div class="item">Lorem</div>
+  <div class="item">Chicken</div>
   
 </div>
 </body>
