--- a/module-solution2/index.html
+++ b/module-solution2/index.html
@@ -118,6 +118,8 @@ p {
   
   </div>
   <div class="container2">
+      <div class="item2">Beef</div>
+
   
   Lorem ipsum dolor sit amet. Aut autem explicabo ex minima animi aut magnam consequatur non voluptates 
   quis ea unde veniam quo voluptates quidem qui doloribus doloribus. Ut enim possimus non placeat iusto 
