--- a/module-solution2/index.html
+++ b/module-solution2/index.html
@@ -27,6 +27,8 @@ p {
   border: 3px solid rgb(23,32,42);
     background-color: rgba(189, 195, 199,.3);
   padding: 5px;
+      justify-content: space-between;
+
     
     }
   .container2 {
@@ -34,6 +36,8 @@ p {
   border: 3px solid rgb(23,32,42);
     background-color: rgba(189, 195, 199,.3);
   padding: 5px;
+      justify-content: space-between;
+
   
     
 }
