--- a/module-solution2/index.html
+++ b/module-solution2/index.html
@@ -29,7 +29,7 @@ p {
   padding: 5px;
       justify-content: space-between;
 
-    
+    margin: 0 0 2em 0;
     }
   .container2 {
   width: 500px;
