--- a/module-solution2/index.html
+++ b/module-solution2/index.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
+<title>our menu</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Our menu</title>
+</head> 
+<body>
+<div class= "our menu">
+</div>
+</body>
+
 <style>
 
 /********** Base styles **********/
@@ -11,7 +17,6 @@ body {
   padding: 20px;
   font: 1em Helvetica Neue, Helvetica, Arial, sans-serif;
 }
-  
   * {
   box-sizing: border-box;
 }
@@ -27,16 +32,14 @@ p {
   border: 3px solid rgb(23,32,42);
     background-color: rgba(189, 195, 199,.3);
   padding: 5px;
-      justify-content: space-between;
 
-    margin: 0 0 2em 0;
+    margin: 0 0 1em 0;
     }
   .container2 {
   width: 500px;
   border: 3px solid rgb(23,32,42);
     background-color: rgba(189, 195, 199,.3);
   padding: 5px;
-      justify-content: space-between;
 
   
     
@@ -47,7 +50,7 @@ p {
   border: 2px solid rgb(23,32,42);
   display: inline-block;
         background-color: rgba(247, 220, 111,.3);
-
+text-align: center;
   vertical-align: middle 
 }
 
@@ -56,7 +59,8 @@ p {
   padding: 10px;
   border: 2px solid rgb(23,32,42);
   display: inline-block;
-        background-color: rgba(247, 220, 111,.3);
+        background-color: rgba(215, 189, 226,.3);
+text-align: center;
 
   vertical-align: middle 
 }
@@ -132,5 +136,6 @@ p {
   Qui doloremque expedita sit maxime magni hic deleniti aperiam ut eveniet optio.
   
   </div>
+  
 </body>
 </html>
