--- a/module-solution2/index.html
+++ b/module-solution2/index.html
@@ -41,6 +41,12 @@ p {
     background-color: rgba(189, 195, 199,.3);
   padding: 5px;
 
+     }
+  .container3 {
+  width: 500px;
+  border: 3px solid rgb(23,32,42);
+    background-color: rgba(189, 195, 199,.3);
+  padding: 5px;
   
     
 }
@@ -64,6 +70,15 @@ text-align: center;
 
   vertical-align: middle 
 }
+  }
+  .item3 {
+  width: 100px;
+  padding: 10px;
+  border: 2px solid rgb(23,32,42);
+  display: inline-block;
+        background-color: rgba(82, 190, 128,.3);
+text-align: center;
+  vertical-align: middle 
   
 /* Simple Responsive Framework. */
 .row {
@@ -127,6 +142,18 @@ text-align: center;
   </div>
   <div class="container2">
       <div class="item2">Beef</div>
+
+  
+  Lorem ipsum dolor sit amet. Aut autem explicabo ex minima animi aut magnam consequatur non voluptates 
+  quis ea unde veniam quo voluptates quidem qui doloribus doloribus. Ut enim possimus non placeat iusto 
+  quo molestiae perferendis vel facere voluptatibus sed dolorem animi ad velit sint et nulla porro. 
+  Non nobis harum hic nisi vero ex dignissimos reprehenderit in facere saepe? 
+  Qui doloremque expedita sit maxime magni hic deleniti aperiam ut eveniet optio.
+  
+  </div>
+  
+  <div class="container3">
+      <div class="item2">Sushi</div>
 
   
   Lorem ipsum dolor sit amet. Aut autem explicabo ex minima animi aut magnam consequatur non voluptates 
