--- a/module-solution2/index.html
+++ b/module-solution2/index.html
@@ -34,21 +34,19 @@ p {
   padding: 5px;
 
     margin: 0 0 1em 0;
-
-  }
+    }
   .container2 {
   width: 500px;
   border: 3px solid rgb(23,32,42);
     background-color: rgba(189, 195, 199,.3);
   padding: 5px;
 
-  }
+    }
   .container3 {
   width: 500px;
   border: 3px solid rgb(23,32,42);
     background-color: rgba(189, 195, 199,.3);
   padding: 5px;
-  
     
 }
   .item1 {
@@ -71,17 +69,17 @@ text-align: center;
 
   vertical-align: middle 
 }
-  
-  }
-  .item3 {
+
+    .item3 {
   width: 100px;
   padding: 10px;
   border: 2px solid rgb(23,32,42);
   display: inline-block;
-        background-color: rgba(82, 190, 128,.3);
+        background-color: rgba(128,128,0,.3);
 text-align: center;
-    
+
   vertical-align: middle 
+}
   
 /* Simple Responsive Framework. */
 .row {
@@ -132,9 +130,6 @@ text-align: center;
 <div class="container1">
   <div class="item1">Chicken</div>
   
-</div>
-  
-<div class="container1">
   
   Lorem ipsum dolor sit amet. Aut autem explicabo ex minima animi aut magnam consequatur non voluptates 
   quis ea unde veniam quo voluptates quidem qui doloribus doloribus. Ut enim possimus non placeat iusto 
@@ -154,8 +149,7 @@ text-align: center;
   Qui doloremque expedita sit maxime magni hic deleniti aperiam ut eveniet optio.
   
   </div>
-  
-  <div class="container3">
+   <div class="container3">
       <div class="item3">Sushi</div>
 
   
@@ -166,6 +160,5 @@ text-align: center;
   Qui doloremque expedita sit maxime magni hic deleniti aperiam ut eveniet optio.
   
   </div>
-  
 </body>
 </html>
