--- a/module-solution2/index.html
+++ b/module-solution2/index.html
@@ -40,6 +40,7 @@ p {
   border: 3px solid rgb(23,32,42);
     background-color: rgba(189, 195, 199,.3);
   padding: 5px;
+    margin: 0 0 1em 0;
 
     }
   .container3 {
@@ -47,7 +48,7 @@ p {
   border: 3px solid rgb(23,32,42);
     background-color: rgba(189, 195, 199,.3);
   padding: 5px;
-    
+
 }
   .item1 {
   width: 100px;
