--- a/module-solution2/index.html
+++ b/module-solution2/index.html
@@ -28,26 +28,37 @@ p {
   margin: 0 0 1em 0;
 }
   .container1 {
+  display: flex;
+  flex-wrap: wrap;
   width: 500px;
   border: 3px solid rgb(23,32,42);
     background-color: rgba(189, 195, 199,.3);
   padding: 5px;
+    margin: 0 0 1em 0;
+      align-content: space-between;
 
-    margin: 0 0 1em 0;
-    }
+}
   .container2 {
+  display: flex;
+  flex-wrap: wrap;
   width: 500px;
   border: 3px solid rgb(23,32,42);
     background-color: rgba(189, 195, 199,.3);
   padding: 5px;
     margin: 0 0 1em 0;
+      align-content: space-between;
+
 
     }
   .container3 {
+  display: flex;
+  flex-wrap: wrap;
   width: 500px;
   border: 3px solid rgb(23,32,42);
     background-color: rgba(189, 195, 199,.3);
   padding: 5px;
+    align-content: space-between;
+
 
 }
   .item1 {
@@ -134,9 +145,6 @@ text-align: center;
   
   Lorem ipsum dolor sit amet. Aut autem explicabo ex minima animi aut magnam consequatur non voluptates 
   quis ea unde veniam quo voluptates quidem qui doloribus doloribus. Ut enim possimus non placeat iusto 
-  quo molestiae perferendis vel facere voluptatibus sed dolorem animi ad velit sint et nulla porro. 
-  Non nobis harum hic nisi vero ex dignissimos reprehenderit in facere saepe? 
-  Qui doloremque expedita sit maxime magni hic deleniti aperiam ut eveniet optio.
   
   </div>
   <div class="container2">
@@ -145,9 +153,6 @@ text-align: center;
   
   Lorem ipsum dolor sit amet. Aut autem explicabo ex minima animi aut magnam consequatur non voluptates 
   quis ea unde veniam quo voluptates quidem qui doloribus doloribus. Ut enim possimus non placeat iusto 
-  quo molestiae perferendis vel facere voluptatibus sed dolorem animi ad velit sint et nulla porro. 
-  Non nobis harum hic nisi vero ex dignissimos reprehenderit in facere saepe? 
-  Qui doloremque expedita sit maxime magni hic deleniti aperiam ut eveniet optio.
   
   </div>
    <div class="container3">
@@ -156,10 +161,6 @@ text-align: center;
   
   Lorem ipsum dolor sit amet. Aut autem explicabo ex minima animi aut magnam consequatur non voluptates 
   quis ea unde veniam quo voluptates quidem qui doloribus doloribus. Ut enim possimus non placeat iusto 
-  quo molestiae perferendis vel facere voluptatibus sed dolorem animi ad velit sint et nulla porro. 
-  Non nobis harum hic nisi vero ex dignissimos reprehenderit in facere saepe? 
-  Qui doloremque expedita sit maxime magni hic deleniti aperiam ut eveniet optio.
-  
   </div>
 </body>
 </html>
