--- a/module-solution2/index.html
+++ b/module-solution2/index.html
@@ -17,11 +17,15 @@ body {
   padding: 20px;
   font: 1em Helvetica Neue, Helvetica, Arial, sans-serif;
 }
+h1 {
+  font-size: 75px;
+}
+
   * {
   box-sizing: border-box;
 }
 h1 {
-  margin-bottom: 15px;
+  margin-bottom: 55px;
 }
 
 p {
@@ -148,7 +152,7 @@ text-align: center;
   
   </div>
   <div class="container2">
-      <div class="item2">Beef</div>
+      <div class="item2"><font color="white">Beef</font></div>
 
   
   Lorem ipsum dolor sit amet. Aut autem explicabo ex minima animi aut magnam consequatur non voluptates 
