--- a/module-solution2/index.html
+++ b/module-solution2/index.html
@@ -15,10 +15,13 @@
 /********** Base styles **********/
 body {
   padding: 20px;
-  font: 1em Helvetica Neue, Helvetica, Arial, sans-serif;
+  font: Helvetica Neue, Helvetica, Arial, sans-serif;
 }
 h1 {
-  font-size: 75px;
+  font-size: 4,6em;
+}
+div class="item1" {
+font-size: 1,5em;
 }
 
   * {
@@ -34,7 +37,7 @@ p {
   .container1 {
   display: flex;
   flex-wrap: wrap;
-  width: 500px;
+  width: 200px;
   border: 3px solid rgb(23,32,42);
     background-color: rgba(189, 195, 199,.3);
   padding: 5px;
@@ -45,7 +48,7 @@ p {
   .container2 {
   display: flex;
   flex-wrap: wrap;
-  width: 500px;
+  width: 200px;
   border: 3px solid rgb(23,32,42);
     background-color: rgba(189, 195, 199,.3);
   padding: 5px;
@@ -57,7 +60,7 @@ p {
   .container3 {
   display: flex;
   flex-wrap: wrap;
-  width: 500px;
+  width: 200px;
   border: 3px solid rgb(23,32,42);
     background-color: rgba(189, 195, 199,.3);
   padding: 5px;
@@ -68,7 +71,7 @@ p {
   .item1 {
   width: 100px;
   padding: 10px;
-  border: 2px solid rgb(23,32,42);
+  border: 1px solid rgb(23,32,42);
   display: inline-block;
         background-color: rgba(247, 220, 111,.3);
 text-align: center;
@@ -78,7 +81,7 @@ text-align: center;
     .item2 {
   width: 100px;
   padding: 10px;
-  border: 2px solid rgb(23,32,42);
+  border: 1px solid rgb(23,32,42);
   display: inline-block;
         background-color: rgba(215, 189, 226,.3);
 text-align: center;
@@ -89,7 +92,7 @@ text-align: center;
     .item3 {
   width: 100px;
   padding: 10px;
-  border: 2px solid rgb(23,32,42);
+  border: 1px solid rgb(23,32,42);
   display: inline-block;
         background-color: rgba(128,128,0,.3);
 text-align: center;
@@ -103,10 +106,10 @@ text-align: center;
 }
 
 /********** Large devices only **********/
-@media (min-width: 1200px) {
+@media (min-width: 992px) {
   .col-lg-1, .col-lg-2, .col-lg-3, {
     float: left;
-    border: 1px solid green;
+    border: 1px solid black;
   }
   .col-lg-1 {
     width: 8.33%;
@@ -121,10 +124,10 @@ text-align: center;
 }
 
 /********** Medium devices only **********/
-@media (min-width: 992px) and (max-width: 1199px) {
+@media (min-width: 768px) and (max-width: 991px) {
   .col-md-1, .col-md-2, .col-md-3 {
     float: left;
-    border: 1px solid green;
+    border: 1px solid black;
   }
   .col-md-1 {
     width: 8.33%;
