--- a/module-solution2/index.html
+++ b/module-solution2/index.html
@@ -6,17 +6,30 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 </head> 
 <body>
-<div class= "our menu">
-</div>
+
 </body>
 
 <style>
 
 /********** Base styles **********/
-body {
-  padding: 20px;
-  font: Helvetica Neue, Helvetica, Arial, sans-serif;
+ * {
+  box-sizing: border-box;
 }
+
+body {
+  font: Helvetica Neue, Helvetica, Arial, sans-serif;
+  
+}
+p {
+  width: 30px;
+border:2px solid rgb(23,32,42);
+display: inline-block;
+padding: 10px;
+float: left
+
+
+}
+
 h1 {
   font-size: 4,6em;
 }
@@ -24,47 +37,51 @@ div class="item1" {
 font-size: 1,5em;
 }
 
-  * {
-  box-sizing: border-box;
-}
+ 
 h1 {
   margin-bottom: 55px;
+  
 }
 
-p {
-  margin: 0 0 1em 0;
-}
   .container1 {
-  display: flex;
+  display: inline-flex;
   flex-wrap: wrap;
-  width: 200px;
-  border: 3px solid rgb(23,32,42);
+  width: 300px;
+  border: 2px solid rgb(23,32,42);
     background-color: rgba(189, 195, 199,.3);
-  padding: 5px;
-    margin: 0 0 1em 0;
-      align-content: space-between;
+  padding: 10px;
+  align-content: space-between;
+      justify-content: right
+
+
+      
+      
+
 
 }
   .container2 {
-  display: flex;
+  display: inline-flex;
   flex-wrap: wrap;
-  width: 200px;
-  border: 3px solid rgb(23,32,42);
+  width: 300px;
+  border: 2px solid rgb(23,32,42);
     background-color: rgba(189, 195, 199,.3);
-  padding: 5px;
-    margin: 0 0 1em 0;
-      align-content: space-between;
+  padding: 10px;
+  align-content: space-between;
+            justify-content: right
+
 
 
     }
   .container3 {
-  display: flex;
+  display: inline-flex;
   flex-wrap: wrap;
-  width: 200px;
-  border: 3px solid rgb(23,32,42);
+  width: 300px;
+  border: 2px solid rgb(23,32,42);
     background-color: rgba(189, 195, 199,.3);
-  padding: 5px;
+  padding: 10px;
     align-content: space-between;
+          justify-content: right
+
 
 
 }
@@ -105,69 +122,26 @@ text-align: center;
   width: 100%;
 }
 
-/********** Large devices only **********/
-@media (min-width: 992px) {
-  .col-lg-1, .col-lg-2, .col-lg-3, {
-    float: left;
-    border: 1px solid black;
-  }
-  .col-lg-1 {
-    width: 8.33%;
-  }
-  .col-lg-2 {
-    width: 16.66%;
-  }
-  .col-lg-3 {
-    width: 25%;
-  }
-  
-}
-
-/********** Medium devices only **********/
-@media (min-width: 768px) and (max-width: 991px) {
-  .col-md-1, .col-md-2, .col-md-3 {
-    float: left;
-    border: 1px solid black;
-  }
-  .col-md-1 {
-    width: 8.33%;
-  }
-  .col-md-2 {
-    width: 16.66%;
-  }
-  .col-md-3 {
-    width: 25%;
-  }
-  
-}
-
 </style>
 </head>
 <body>
-<h1>Our menu</h1>
+<h1><center>Our menu</center></h1>
 
 <div class="container1">
   <div class="item1">Chicken</div>
-  
-  
-  Lorem ipsum dolor sit amet. Aut autem explicabo ex minima animi aut magnam consequatur non voluptates 
-  quis ea unde veniam quo voluptates quidem qui doloribus doloribus. Ut enim possimus non placeat iusto 
-  
+ <content> Lorem ipsum dolor sit amet. Aut autem explicabo ex minima animi aut magnam consequatur non voluptates 
+  quis ea unde veniam quo voluptates quidem qui doloribus doloribus. Ut enim possimus non placeat iusto   </content>
   </div>
   <div class="container2">
       <div class="item2"><font color="white">Beef</font></div>
-
-  
-  Lorem ipsum dolor sit amet. Aut autem explicabo ex minima animi aut magnam consequatur non voluptates 
-  quis ea unde veniam quo voluptates quidem qui doloribus doloribus. Ut enim possimus non placeat iusto 
-  
+ <content>Lorem ipsum dolor sit amet. Aut autem explicabo ex minima animi aut magnam consequatur non voluptates 
+  quis ea unde veniam quo voluptates quidem qui doloribus doloribus. Ut enim possimus non placeat iusto </content>
   </div>
+  
    <div class="container3">
       <div class="item3">Sushi</div>
-
-  
-  Lorem ipsum dolor sit amet. Aut autem explicabo ex minima animi aut magnam consequatur non voluptates 
-  quis ea unde veniam quo voluptates quidem qui doloribus doloribus. Ut enim possimus non placeat iusto 
+  <content>Lorem ipsum dolor sit amet. Aut autem explicabo ex minima animi aut magnam consequatur non voluptates 
+  quis ea unde veniam quo voluptates quidem qui doloribus doloribus. Ut enim possimus non placeat iusto </content>
   </div>
 </body>
 </html>
