--- a/module-solution2/index.html
+++ b/module-solution2/index.html
@@ -46,10 +46,13 @@ h1 {
   .container1 {
   display: inline-flex;
   flex-wrap: wrap;
-  width: 300px;
+    justify-container: space-between;
+
+  gap: 10px;
+  width: 333px;
   border: 2px solid rgb(23,32,42);
     background-color: rgba(189, 195, 199,.3);
-  padding: 10px;
+  padding: 0px;
   align-content: space-between;
       justify-content: right
 
@@ -62,10 +65,11 @@ h1 {
   .container2 {
   display: inline-flex;
   flex-wrap: wrap;
-  width: 300px;
+  gap: 10px;
+  width: 333px;
   border: 2px solid rgb(23,32,42);
     background-color: rgba(189, 195, 199,.3);
-  padding: 10px;
+  padding: 0px;
   align-content: space-between;
             justify-content: right
 
@@ -75,10 +79,11 @@ h1 {
   .container3 {
   display: inline-flex;
   flex-wrap: wrap;
-  width: 300px;
+  gap: 10px;
+  width: 333px;
   border: 2px solid rgb(23,32,42);
     background-color: rgba(189, 195, 199,.3);
-  padding: 10px;
+  padding: 0px;
     align-content: space-between;
           justify-content: right
 
@@ -86,18 +91,19 @@ h1 {
 
 }
   .item1 {
-  width: 100px;
-  padding: 10px;
+  width: 120px;
+  padding: 5px;
   border: 1px solid rgb(23,32,42);
   display: inline-block;
         background-color: rgba(247, 220, 111,.3);
 text-align: center;
   vertical-align: middle 
+  
 }
 
     .item2 {
-  width: 100px;
-  padding: 10px;
+  width: 120px;
+  padding: 5px;
   border: 1px solid rgb(23,32,42);
   display: inline-block;
         background-color: rgba(215, 189, 226,.3);
@@ -107,8 +113,8 @@ text-align: center;
 }
 
     .item3 {
-  width: 100px;
-  padding: 10px;
+  width: 120px;
+  padding: 5px;
   border: 1px solid rgb(23,32,42);
   display: inline-block;
         background-color: rgba(128,128,0,.3);
